--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,9 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  display: flex;
 }
 
 .App-header {
@@ -28,11 +23,43 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content-body {
+  margin-left: 4rem;
+}
+
+.footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-color: #61DAFB;
+  text-align: left;
+}
+
+.logo-bg {
+  color: #61DAFB;
+  font-weight: bold;
+}
+
+.navbar {
+  background-color: #21222A;
+}
+
+.main-content {
+  color: white;
+  background-image: url(./images/react-icon-large.png);
+  background-repeat: no-repeat;
+  background-position: right 75%;
+  height: 60vh;
+}
+
+.content-body>li {
+  line-height: 19px;
+  padding-block: 10px;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+li::marker {
+  color: #61DAFB;
+  font-size: 23px;
 }
